[package]
name = "BlockGenChallenge"
version = "0.1.0"
authors = ["mczarnek <matthewczarnek@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.59"
reqwest = {version = "0.10.8", features = ["blocking"]}
regex = "1.4.1"
lazy_static = "1.4.0"